# python-template

./: .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pre-commit.yaml  publish.yaml  scorecard.yml  validate.yaml
app/: __init__.py  __main__.py  cli.py
python_template/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py
