[tool.poetry]
name = "python-template-x"
version = "0.4.1"
description = "This is a python template."
authors = ["Mark Beacom <m@beacom.dev>"]
readme = "README.md"
packages = [{include = "python_template"}]
license = "MIT"
keywords = ["app", "cli", "python", "template"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
include = [
    "README.md",
    "LICENSE",
]

[tool.poetry.scripts]
python-template = "python_template.cli:app"

[tool.bandit]
exclude_dirs = ["tests"]

# Styling and linting Configurations
[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
# Assume Python 3.13.
target-version = "py313"
# Same as our 120 Black setting.
line-length = 120
[tool.ruff.lint]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "B", # bugbear
    "W", # pycodestyle warnings
    "C90", # McCabe complexity
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "UP", # pyupgrade
    "ANN", # flake8-annotations
    "S", # bandit
    "ASYNC", # flake8-async
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "FA", # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "FLY", # flynt
]
# Ignore E501 (bugbear line length) by default.
ignore = [
    "E501", # line-too-long
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line - Multi-line docstring summary should start at the second line
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # Ignore assert statements in tests
    "ARG", # Ignore unused function args, e.g., fixtures
    "FBT", # Ignore booleans as positional arguments in tests, e.g., @pytest.mark.parametrize()
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__main__.py",
]

[tool.poe.tasks]
isort = "isort --profile=black ."
black = "black ."
check-black = {cmd = "black . --check --diff", help = "Validate styling with black"}
check-isort = {cmd = "isort --check --profile=black .", help = "Validate import ordering with isort"}
update-precommit-hooks = {cmd = "pre-commit autoupdate --freeze", help = "Update pre-commit hooks and freeze to SHAs"}
check-precommit-hooks = {cmd = "pre-commit run --all-files", help = "Run pre-commit hooks on all files"}
check-ruff = "ruff check python_template"
check-mypy = "mypy python_template"
check = ["check-ruff", "check-isort", "check-black", "check-mypy"]
lint = ["ruff"]
fix = ["ruff", "isort", "black"]
test = "pytest --cov=python_template --cov-report=xml --cov-report=term"
ruff = "ruff check --fix python_template"
safety = "safety check --ignore 70612" # 70612 ignores the jinja2 CVE used by mkdocs
bandit = "bandit -r python_template"
security = ["safety", "bandit"]
# requires poethepoet outside of poetry.
install = "poetry install"
build = "poetry build"
poetry-update-core = "poetry add 'typer[all]@latest'"
poetry-update-dev = "poetry add --group dev 'isort[toml]@latest' black@latest mypy@latest debugpy@latest ruff@latest poethepoet@latest"
poetry-update-test = "poetry add --group test pytest@latest pytest-cov@latest coverage@latest"
poetry-update-security = "poetry add --group security safety@latest 'bandit[toml]@latest'"
poetry-update-docs = "poetry add --group docs mkdocs@latest mkdocs-material@latest 'mkdocstrings[python]@latest'"
standard-update = "poetry self update && poetry update"
update = ["poetry-update-core", "poetry-update-dev", "poetry-update-test", "poetry-update-security", "poetry-update-docs"]


[tool.poetry.dependencies]
python = "^3.9"
pip = ">= 24.0"
typer = {extras = ["all"], version = "^0.12.5"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
coverage = "^7.6.3"

[tool.poetry.group.dev.dependencies]
isort = {extras = ["toml"], version = "^5.13.2"}
black = "^24.10.0"
mypy = "^1.12.0"
debugpy = "^1.8.7"
ruff = ">=0.7,<0.9"
poethepoet = "^0.29.0"

[tool.poetry.group.security.dependencies]
safety = "^3.2.8"
bandit = {extras = ["toml"], version = "^1.7.10"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.41"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
